--- a/Class11/20191106_PDB.md
+++ b/Class11/20191106_PDB.md
@@ -100,7 +100,7 @@ pdb
 ##### Access atoms.
 
 ``` r
-pdb$atom
+head(pdb$atom)
 ```
 
     ##        type eleno elety  alt resid chain resno insert      x       y
