--- a/Class12_in_class_work/Class Twelve In-Class Work.Rmd
+++ b/Class12_in_class_work/Class Twelve In-Class Work.Rmd
@@ -1,38 +1,36 @@
 ---
-title: Class Twelve In-Class Work
-author: Emily Armbruster
+title: "Receptor-Based Drug Discovery"
+author: "Emily Armbruster"
 output: github_document
 ---
-### We're going to look at the structure of the HIV protease and drug binding.
-### First, load the Bio3D package and use read.pdb() to pull in the structure with "library(bio3d)". Do this in the console so we don't re-load the package every time you knit the R Markdown file. Use "read.pdb" to birng in the "1hsg" file. Then we're going to create two different pdb files for the ligand and the protein.
+# We're going to look at the structure of the HIV protease and drug binding.
+##### First, load the Bio3D package and use read.pdb() to pull in the structure with "library(bio3d)". Do this in the console so we don't re-load the package every time you knit the R Markdown file. Use "read.pdb" to bring in the "1hsg" pdb file. Then we're going to create two different pdb files for the ligand and the protein.
 
-### Assign the structure to the name "hiv". Get a quick summary of the object by typing in its name.
+##### Assign the structure to the name "hiv". Get a quick summary of the object by typing in its name.
 
 ```{r}
 library(bio3d)
 hiv <- read.pdb("1hsg")
 hiv
 ```
-### Q1: What is the name of the two non protein resid values in this structure? What does resid correspond to and how would you get a listing of all reside values in this structure? 
-### The two non protein resid values are "HOH (127)" and "MK1 (1)".
 
-### Produce a "1hsg_protein.pdb" and "1hsg_ligand.pdb" file
-### Do the ligand first.
+##### The two non protein resid values are "HOH (127)" and "MK1 (1)", representing water around the protein and the ligand.
+
+###### Produce a "1hsg_protein.pdb" and "1hsg_ligand.pdb" file. Do the ligand first.
 ```{r}
 ligand <- atom.select(hiv, "ligand", value = TRUE)
 write.pdb(ligand, file = "1hsg_ligand.pdb")
 ```
-### Then do the protein.
+##### Then do the protein.
 ```{r}
 protein <- atom.select(hiv, "protein", value = TRUE)
 write.pdb(protein, file = "1hsg_protein.pdb")
 ```
 
-### Format an output file with config.txt. 
-#### num_modes = 50 <- Number of results it makes
-#### out = all.pdbqt <- Type of file in output.
+##### Format an output file with config.txt. 
+##### out = all.pdbqt <- Type of file in output.
 
-# Inspect docking results. "multi=TRUE" allows us to read the file.
+##### Inspect docking results. "multi=TRUE" allows us to read the file. View in VMD.
 ```{r}
 res <- read.pdb("all.pdbqt", multi=TRUE)
 write.pdb(res, "results.pdb")
